2008-11-13  kitone  <kitone@gna.org>

	* plugins/actions/externalvideoplayer/dialog-external-video-player-preferences.glade:
	Fix: do not translate stock items. (Patch: Luboš Staněk)

2008-11-13  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/gstreamer_utility.cc:
	* src/gstreamer_utility.h:
	* src/utility.cc:
	* src/utility.h:
	* src/vp/GStreamerPlayer.cc:
	* src/we/WaveformGenerator.cc:
	Move GStreamer utility code in new file gstreamer_utility.

2008-11-13  kitone  <kitone@gna.org>

	* prepare-po.sh:
	Add [type: gettext/ini] before the se-plugin name.

2008-11-13  kitone  <kitone@gna.org>

	* src/Options.cc:
	* src/Options.h:
	* src/main.cc:
	Remove unittest.

2008-11-13  kitone  <kitone@gna.org>

	* src/Default.h:
	* src/Makefile.am:
	* src/unittest/adobe.encore.dvd.ntsc.format:
	* src/unittest/adobe.encore.dvd.ntsc.format.euc-jp:
	* src/unittest/adobe.encore.dvd.pal.format:
	* src/unittest/adobe.encore.dvd.pal.format.euc-jp:
	* src/unittest/ass.format:
	* src/unittest/ass.format.euc-jp:
	* src/unittest/microdvd.format:
	* src/unittest/microdvd.format.euc-jp:
	* src/unittest/mpl2.format:
	* src/unittest/mpl2.format.euc-jp:
	* src/unittest/mpsub.format:
	* src/unittest/mpsub.format.euc-jp:
	* src/unittest/ssa.format:
	* src/unittest/ssa.format.euc-jp:
	* src/unittest/subrip.format:
	* src/unittest/subrip.format.euc-jp:
	* src/unittest/subtitle.editor.project.format:
	* src/unittest/subtitle.editor.project.format.euc-jp:
	* src/unittest/subviewer2.0.format:
	* src/unittest/subviewer2.0.format.euc-jp:
	* src/unittest/testColor.cc:
	* src/unittest/testSubtitleTime.cc:
	* src/unittest/transcript:
	* src/unittest/unittest.cc:
	Remove unsed file and unittest.

2008-11-13  kitone  <kitone@gna.org>

	* plugins/actions/configurekeyboardshortcuts/Makefile.am:
	Fix: wrong directory.

2008-11-13  kitone  <kitone@gna.org>

	* plugins/actions/about/Makefile.am:
	* plugins/actions/about/about.se-plugin.desktop.in:
	* plugins/actions/adjusttime/Makefile.am: